--- a/Bonus/index.html
+++ b/Bonus/index.html
@@ -11,6 +11,20 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
+                    <div class="text-center">
+                        <h1>Memember</h1>
+                        <h5>Ricordati della tua memoria</h5>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <select name="difficulty" id="difficulty">
+                        <option value="#">SCEGLI LA DIFFICOLTA'</option>
+                        <option value="1">Facile</option>
+                        <option value="2">Medio</option>
+                        <option value="3">Difficile</option>
+                    </select>
+                </div>
+                <div class="col-12">
                     <div class="text-center my-3">
                         <ul id="list_number" class="d-flex gap-5 list-unstyled">
 
