--- a/Bonus/index.html
+++ b/Bonus/index.html
@@ -23,6 +23,7 @@
                         <option value="2">Medio</option>
                         <option value="3">Difficile</option>
                     </select>
+                    <button id="play" class="btn btn-sm btn-success">play</button>
                 </div>
                 <div class="col-12">
                     <div class="text-center my-3">
