add congratulation text

--- a/Bonus/index.html
+++ b/Bonus/index.html
@@ -30,6 +30,12 @@
                         <ul id="list_number" class="d-flex gap-5 list-unstyled">
 
                         </ul>
+                        <div id="text_reset">
+                            <h4 id="congrat"></h4>
+                            <ul id="number_guessed" class="d-flex gap-5 list-unstyled">
+    
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
