add impossible level

--- a/Bonus/index.html
+++ b/Bonus/index.html
@@ -17,20 +17,24 @@
                     </div>
                 </div>
                 <div class="col-12">
-                    <select name="difficulty" id="difficulty">
-                        <option value="#">SCEGLI LA DIFFICOLTA'</option>
-                        <option value="1">Facile</option>
-                        <option value="2">Medio</option>
-                        <option value="3">Difficile</option>
-                    </select>
-                    <button id="play" class="btn btn-sm btn-success">play</button>
+                    <div class="text-center">
+                        <select name="difficulty" id="difficulty">
+                            <option value="#">SCEGLI LA DIFFICOLTA'</option>
+                            <option value="1">Facile</option>
+                            <option value="2">Medio</option>
+                            <option value="3">Difficile</option>
+                            <option value="4">Impossibile</option>
+
+                        </select>
+                        <button id="play" class="btn btn-sm btn-success">play</button>
+                    </div>
                 </div>
                 <div class="col-12">
-                    <div class="text-center my-3">
+                    <div class="d-flex justify-content-center my-3">
                         <ul id="list_number" class="d-flex gap-5 list-unstyled">
 
                         </ul>
-                        <div id="text_reset">
+                        <div id="text_reset" cla>
                             <h4 id="congrat"></h4>
                             <ul id="number_guessed" class="d-flex gap-5 list-unstyled">
     
